# moonbit-webview

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  binding.mbt  moon.mod.json  moon.work  native_link_config.mjs  skills-lock.json  webview.mbt  webview_test.mbt
app/: README.md  config_bridge.mbt  create.mbt  install.mbt  moon.mod.json  moon.pkg  order.mbt  pkg.generated.mbti  prepare_wbtest.mbt  types.mbt
bootstrap/: README.md  config.mbt  config_build.mbt  config_decode.mbt  config_document.mbt  config_document_edit.mbt  config_document_json.mbt  config_document_load.mbt  config_paths.mbt  config_test.mbt  control_plane.mbt  moon.mod.json  moon.pkg  pkg.generated.mbti  types.mbt
catalog/: README.md  catalog_metadata.mbt  catalog_test.mbt  catalog_types.mbt  extension_catalog.mbt  extension_descriptor.mbt  extension_link_plan.mbt  moon.mod.json  moon.pkg  pkg.generated.mbti  result_zip.mbt
core/: moon.mod.json
examples/: Readme.md  moon.mod.json
extensions/: README.md  moon.mod.json
global_hotkey/: README.md  global_hotkey.mbt  global_hotkey_native.c  global_hotkey_wbtest.mbt  moon.mod.json  moon.pkg  pkg.generated.mbti
lib/: libwebview.so.0.12.0  webview.exp
manifest/: app_manifest.mbt  manifest_entry.mbt  manifest_extensions.mbt  manifest_test.mbt  manifest_window.mbt  moon.mod.json  moon.pkg  pkg.generated.mbti
notification/: README.md  moon.mod.json  moon.pkg  notification.mbt  notification_native.c  notification_wbtest.mbt  pkg.generated.mbti
plugins/: README.md  moon.mod.json
runtime/: README.md  embed_asset.mjs  moon.mod.json
(+328 files in other folders)
